--- a/src/app/components/workers-dashboard/workers-dashboard.component.scss
+++ b/src/app/components/workers-dashboard/workers-dashboard.component.scss
@@ -15,4 +15,8 @@ td, th {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  .add-employee-icon {
+    font-size: 22px;
+  }
 }
