--- a/src/app/components/workers-dashboard/workers-dashboard.component.html
+++ b/src/app/components/workers-dashboard/workers-dashboard.component.html
@@ -3,7 +3,9 @@
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
   </mat-form-field>
-  <button mat-button (click)="addEmployee()" mat-flat-button color="primary">Add Employee</button>
+  <button mat-button (click)="addEmployee()" mat-flat-button color="primary">
+    <mat-icon class="add-employee-icon">add</mat-icon> Employee
+  </button>
 </div>
 
 <div class="mat-elevation-z8">
