--- a/src/app/components/workers-dashboard/workers-dashboard.component.html
+++ b/src/app/components/workers-dashboard/workers-dashboard.component.html
@@ -3,44 +3,65 @@
     <mat-label>Filter</mat-label>
     <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
   </mat-form-field>
-  <button mat-button (click)="addEmployee()" mat-flat-button color="primary">
-    <mat-icon class="add-employee-icon">add</mat-icon> Employee
-  </button>
 </div>
 
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource" matSort>
 
-    <!-- ID Column -->
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> ID</th>
-      <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+    <ng-container matColumnDef="fullName">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Full name</th>
+      <td mat-cell *matCellDef="let employee"> {{employee.fullName}} </td>
     </ng-container>
 
-    <!-- Progress Column -->
-    <ng-container matColumnDef="progress">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Progress</th>
-      <td mat-cell *matCellDef="let row"> {{row.progress}}%</td>
+    <ng-container matColumnDef="position">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Position</th>
+      <td mat-cell *matCellDef="let employee"> {{employee.position}} </td>
     </ng-container>
 
-    <!-- Name Column -->
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name</th>
-      <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+    <ng-container matColumnDef="birthday">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Birthday</th>
+      <td mat-cell *matCellDef="let employee"> {{employee.birthday | date: 'dd/MM/yyyy'}} </td>
     </ng-container>
 
-    <!-- Color Column -->
-    <ng-container matColumnDef="color">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Color</th>
-      <td mat-cell *matCellDef="let row" [style.color]="row.color"> {{row.color}} </td>
+    <ng-container matColumnDef="gender">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Gender</th>
+      <td mat-cell *matCellDef="let employee"> {{employee.gender}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="contactInformation">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Contact Information</th>
+      <td mat-cell *matCellDef="let employee"> {{(employee.contactInformation || "not provided") | truncate: 20}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="salary">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> Salary</th>
+      <td mat-cell *matCellDef="let employee">$ {{employee.salary}} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="actions">
+      <th mat-header-cell *matHeaderCellDef class="text-end">
+        <button mat-button (click)="addEmployee()" mat-flat-button color="primary">
+          <mat-icon class="add-employee-icon">add</mat-icon>
+          Employee
+        </button>
+      </th>
+      <td mat-cell *matCellDef="let employee; let i=index;" class="text-end">
+        <button mat-icon-button color="accent" (click)="editEmployee()">
+          <mat-icon aria-label="Edit">edit</mat-icon>
+        </button>
+
+        <button mat-icon-button color="accent" (click)="deleteEmployee()">
+          <mat-icon aria-label="Delete">delete</mat-icon>
+        </button>
+      </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let employee; columns: displayedColumns;"></tr>
 
     <!-- Row shown when there is no matching data. -->
     <tr class="mat-row" *matNoDataRow>
-      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      <td class="mat-cell" colspan="7">No data matching the filter "{{input.value}}"</td>
     </tr>
   </table>
 
