--- a/src/app/components/workers-dashboard/workers-dashboard.component.html
+++ b/src/app/components/workers-dashboard/workers-dashboard.component.html
@@ -50,7 +50,7 @@
           <mat-icon aria-label="Edit">edit</mat-icon>
         </button>
 
-        <button mat-icon-button color="accent" (click)="deleteEmployee()">
+        <button mat-icon-button color="accent" (click)="removeEmployee(employee, i)">
           <mat-icon aria-label="Delete">delete</mat-icon>
         </button>
       </td>
