--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,3 +12,7 @@ input[type=number]::-webkit-outer-spin-button {
 .text-end {
   text-align: end !important;
 }
+
+.mat-dialog-actions {
+  justify-content: flex-end;
+}
