--- a/src/app/components/workers-dashboard/workers-dashboard.component.html
+++ b/src/app/components/workers-dashboard/workers-dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="header-actions">
   <mat-form-field>
-    <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+    <mat-label>Search</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Employee Name" #input>
   </mat-form-field>
 </div>
 
